refactor(wfs): minor refacting in wfs